Fix various issues (spacing primarily) with Adventures section

--- a/style.css
+++ b/style.css
@@ -218,12 +218,8 @@ main .container .logo-small {
 }
 #adventures {
     width: 100%;
-    padding: 0 20px;
     background-color: #003C2D;
     color: #FFb4a4;
-}
-#adventures .container {
-    margin: 0 10px 0 10px;
 }
 #adventures h2 {
     text-align: center;
@@ -231,9 +227,10 @@ main .container .logo-small {
     text-decoration: underline;
 }
 #adventures h3 {
-    margin: 0 20px 20px 20px;
+    margin: 0;
     font-size: 20px;
     text-decoration: none;
+    text-align: center;
 }
 #contact {
     width: 100%;
